<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/white"
        tools:context=".LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/blue" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textSize="16sp"
                        android:textColor="@color/grey"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/grey" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp"
                app:hintAnimationEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/ll_top">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp"
                app:hintAnimationEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/til_mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/btn_bg"
                app:layout_constraintTop_toBottomOf="@id/til_pass" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/view_1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toBottomOf="@id/tv_forget"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_sign" />

            <TextView
                android:id="@+id/tv_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_in_with"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:textSize="12sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_forget"
                app:layout_constraintStart_toEndOf="@id/view_1"
                app:layout_constraintEnd_toStartOf="@id/view_2" />

            <View
                android:id="@+id/view_2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/tv_forget"
                app:layout_constraintStart_toEndOf="@id/tv_sign"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/ll_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/view_1">

                <ImageView
                    android:id="@+id/iv_fb"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_fb" />

                <ImageView
                    android:id="@+id/iv_google"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_google" />

                <ImageView
                    android:id="@+id/iv_apple"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_apple" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/ll_social"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_a_account"
                    android:layout_marginEnd="3dp"
                    android:textSize="12sp"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    android:text="@string/sign_up" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>